--- a/ssh/config
+++ b/ssh/config
@@ -38,11 +38,11 @@ Host 3900xz ip102z
 
 Host ethem ip102
   Hostname 192.168.1.102
-  Port 22
+  Port 2102
 
 Host ethemz ip102z
   Hostname 23.119.164.150
-  Port 22
+  Port 2102
 
 Host hazel 1p103
   Hostname 192.168.1.103
@@ -126,9 +126,9 @@ Host rpi48z ip112z
 
 Host imacx ip113
   Hostname 192.168.1.113
-  Port 22
+  Port 2113
 
-Host imacx ip113z
+Host imacxz ip113z
   Hostname 23.119.164.150
   Port 2113
 
