feat: Update ssh/config and dhcpd.conf
Added some missing hosts and added authorative to dhcpd.conf

--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -1,4 +1,5 @@
 # DHCPD configuration file used on rip23
+authoritative;
 max-lease-time 86400;
 option domain-name "saville.com";
 option domain-name-servers 8.8.8.8, 8.8.4.4;
@@ -72,27 +73,30 @@ host fwlaptop-wifi {
   fixed-address 192.168.1.108;
   hardware ethernet 54:14:F3:52:43:E2;
 }
-
 host rpi23 {
   fixed-address 192.168.1.109;
   hardware ethernet b8:27:eb:73:ae:23;
 }
-
 host rpi38 {
   fixed-address 192.168.1.110;
   hardware ethernet b8:27:eb:09:b2:38;
 }
-
 host ubuntu-20-04-3 {
   fixed-address 192.168.1.111;
   hardware ethernet 08:00:27:06:d3:4e;
 }
-
 host rpi48 {
   fixed-address 192.168.1.112;
   hardware ethernet e4:5f:01:5d:cb:48;
 }
-
+host imacx {
+  fixed-address 192.168.1.113;
+  hardware ethernet D0:81:7A:D5:B8:1D;
+}
+host ubuntu-22-04 {
+  fixed-address 192.168.1.114;
+  hardware ethernet 08:00:27:4f:49:13;
+}
 
 # Unused 120 .. 149
 
