--- a/ssh/config
+++ b/ssh/config
@@ -37,10 +37,12 @@ Host 3900xz ip102z
   Port 2101
 
 Host ethem ip102
+  ForwardX11Trusted yes
   Hostname 192.168.1.102
   Port 2102
 
 Host ethemz ip102z
+  ForwardX11Trusted yes
   Hostname 23.119.164.150
   Port 2102
 
@@ -125,12 +127,22 @@ Host rpi48z ip112z
   Port 2112
 
 Host imacx ip113
+  ForwardX11Trusted yes
   Hostname 192.168.1.113
   Port 2113
 
 Host imacxz ip113z
+  ForwardX11Trusted yes
   Hostname 23.119.164.150
   Port 2113
+
+Host ubuntu-22-04 ip114
+  Hostname 192.168.1.114
+  Port 2114
+
+Host ip114z
+  Hostname 23.119.164.150
+  Port 2114
 
 # Suppress when doing git operations on github:
 #   X11 forwarding request failed on channel 0
