--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -1,4 +1,4 @@
-# DHCPD configuration file used on rip23
+# DHCPD configuration file used on rpi23:/etc/dhcpd.conf
 authoritative;
 max-lease-time 86400;
 option domain-name "saville.com";
@@ -7,12 +7,22 @@ option subnet-mask 255.255.255.0;
 option routers 192.168.1.1;
 
 # Dynamic address space 150 .. 250
+# Unused 20 .. 89, 120 .. 149, 251 .. 254
 subnet 192.168.1.0 netmask 255.255.255.0 {
   range 192.168.1.150 192.168.1.250;
 }
-# Unused 20 .. 89, 120 .. 149, 251 .. 254
 
+# System Router 1
+#host ASUS_RT_AX86U {
+#  fixed-address 192.168.1.1;
+#  hardware ethernet  ??
+#}
+#
 # Static 2 .. 19
+host GS108E_CC {
+  fixed-address 192.168.1.9;
+  hardware ethernet  E0:46:EE:10:58:CC
+}
 host orbi-main {
   fixed-address 192.168.1.10;
   hardware ethernet  A0:04:60:14:9A:41;
@@ -96,6 +106,10 @@ host imacx {
 host ubuntu-22-04 {
   fixed-address 192.168.1.114;
   hardware ethernet 08:00:27:4f:49:13;
+}
+host bk-usbc-eth { # belkin USB-C ethernet adapter
+  fixed-address 192.168.1.115;
+  hardware ethernet 30:23:03:30:05:35:51;
 }
 
 # Unused 120 .. 149
