Fix bugs in dhcpd.conf
Missing semicolon in gs108e_cc and an hardware ethernet address was
incorrect in bk-usbc-eth.

Also make GS108E_CC lowercase, gs108e_cc as the other names are lowercase.

--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -19,9 +19,9 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
 #}
 #
 # Static 2 .. 19
-host GS108E_CC {
+host gs108e_cc {
   fixed-address 192.168.1.9;
-  hardware ethernet  E0:46:EE:10:58:CC
+  hardware ethernet  E0:46:EE:10:58:CC;
 }
 host orbi-main {
   fixed-address 192.168.1.10;
@@ -109,7 +109,7 @@ host ubuntu-22-04 {
 }
 host bk-usbc-eth { # belkin USB-C ethernet adapter
   fixed-address 192.168.1.115;
-  hardware ethernet 30:23:03:30:05:35:51;
+  hardware ethernet 30:23:03:05:35:51;
 }
 
 # Unused 120 .. 149
