chore: Change rpi38 to use default port and not a static address
Changed rpi23 to use dnsmasq, thus dnsmasq.conf, as the DNS and DHCPD. And
I've made rpi38 use a dynamic address. So all devices that want to
use-rpi38 need to use chrony.conf.use-rpi38 as there chrony.conf. I've also
now saving chrony.conf.rpi38 which is rpi38's chrony.conf.

Previously the main reason so many computers have static addresses was so
I could access them from the internet and assign each a unique ssh port and
then use port forwarding to log into them. First I don't do that often and
second its a security risk and also a greater maintenance problem then
using dynamic address.

Also, Add chrony.conf.rpi38 and chrony.conf.use-rpi38. chrony.conf.rpi38 is
chrony.config for rpi38 which has a GPS card for an accurate time base
which chrony uses. For other devices using NTP they shoudl use
chrony.conf.use-rpi38 as their chrony.conf as this points at rpi38 via its
name rather than its previous static address, 192.168.1.110.

--- a/ssh/config
+++ b/ssh/config
@@ -102,13 +102,13 @@ Host rpi23z ip109z
   Hostname 23.119.164.150
   Port 2109
 
-Host rpi38 ip110
-  Hostname 192.168.1.110
-  Port 2110
-
-Host rpi38z ip110z
-  Hostname 23.119.164.150
-  Port 2110
+#Host rpi38 ip110
+#  Hostname 192.168.1.110
+#  Port 2110
+#
+#Host rpi38z ip110z
+#  Hostname 23.119.164.150
+#  Port 2110
 
 Host ubuntu-20-04 ip111
   Hostname 192.168.1.111
