--- a/ssh/config
+++ b/ssh/config
@@ -1,20 +1,17 @@
-# Generally Host's have two names the device name such as 3900x and the
-# "ip" name. Which for 3900x is ip101. The 101 is the last decimal byte of
-# it's local address, which for 3900x is 192.168.1.101.
-#
-# In addition another pair of names with the pubic hostname, 23.119.164.150,
-# is also available. So 3900x can be ssh'd into from outside the network with
-# 3900z or ip101z.
-#
-# Examples:
-#
-#   ssh wink@3900x
-#   ssh wink@3900xz
-#
-# or
-#
-#   ssh wink@ip101
-#   ssh wink@ip101z
+# Define name and port for access sshd. Previously
+# I had most/all of my computers statically allocated
+# IPv4 addresses and gave each of them a unique ssh port
+# By doing this I could use port fowarding on the router
+# to ssh into any of the computers. I've decied this is
+# overly complex and a potential security problem. Therefore
+# all internal computers will use port 22, the default,
+# for ssh and have dynamically defined IPv4 addresses.
+# This is now possible because I'm using dnsmasg which has
+# a builtin DNS and DHCP service that are coordinated and
+# so I can consistently access devices using their hostnames.
+# I initially had problems with macosx machines but after
+# disabling IPv6 in dnsmasq all hostnames are consistently
+# resolved.
 
 #Host aur.archlinux.org
 #  IdentityFile ~/.ssh/aur
@@ -36,39 +33,39 @@ Host do-sfo3-01
 #  Hostname 23.119.164.150
 #  Port 2101
 
-Host ethem ip102
-  ForwardX11Trusted yes
-  Hostname 192.168.1.102
-  Port 2102
+#Host ethem ip102
+#  ForwardX11Trusted yes
+#  Hostname 192.168.1.102
+#  Port 2102
 
-Host ethemz ip102z
-  ForwardX11Trusted yes
-  Hostname 23.119.164.150
-  Port 2102
+#Host ethemz ip102z
+#  ForwardX11Trusted yes
+#  Hostname 23.119.164.150
+#  Port 2102
 
 Host hazel 1p103
   Hostname 192.168.1.103
   Port 2103
 
-Host hazelz ip103z
-  Hostname 23.119.164.150
-  Port 2103
+#Host hazelz ip103z
+#  Hostname 23.119.164.150
+#  Port 2103
 
-Host xps15 ip104
-  Hostname 192.168.1.104
-  Port 22
-
-Host ip104z
-  Hostname 23.119.164.150
-  Port 2104
-
-Host ip105
-  Hostname 192.168.1.105
-  Port 2105
-
-Host ip105z
-  Hostname 23.119.164.150
-  Port 2105
+#Host xps15 ip104
+#  Hostname 192.168.1.104
+#  Port 22
+#
+#Host ip104z
+#  Hostname 23.119.164.150
+#  Port 2104
+#
+#Host ip105
+#  Hostname 192.168.1.105
+#  Port 2105
+#
+#Host ip105z
+#  Hostname 23.119.164.150
+#  Port 2105
 
 #Host ethel ip106
 #  Hostname 192.168.1.106
@@ -82,17 +79,17 @@ Host robert ip107
   Hostname 192.168.1.107
   Port 2107
 
-Host robertz ip107z
-  Hostname 23.119.164.150
-  Port 2107
+#Host robertz ip107z
+#  Hostname 23.119.164.150
+#  Port 2107
 
-Host fwlaptop ip108
-  Hostname 192.168.1.108
-  Port 2108
-
-Host fwlaptopz ip108z
-  Hostname 23.119.164.150
-  Port 2108
+#Host fwlaptop ip108
+#  Hostname 192.168.1.108
+#  Port 2108
+#
+#Host fwlaptopz ip108z
+#  Hostname 23.119.164.150
+#  Port 2108
 
 #Host rpi23 ip109
 #  Hostname 192.168.1.109
@@ -110,39 +107,39 @@ Host fwlaptopz ip108z
 #  Hostname 23.119.164.150
 #  Port 2110
 
-Host ubuntu-20-04 ip111
-  Hostname 192.168.1.111
-  Port 2111
+#Host ubuntu-20-04-3 ip111
+#  Hostname 192.168.1.111
+#  Port 2111
+#
+#Host ip111z
+#  Hostname 23.119.164.150
+#  Port 2111
 
-Host ip111z
-  Hostname 23.119.164.150
-  Port 2111
+#Host rpi48 ip112
+#  Hostname 192.168.1.112
+#  Port 2112
+#
+#Host rpi48z ip112z
+#  Hostname 23.119.164.150
+#  Port 2112
+#
+#Host imacx ip113
+#  ForwardX11Trusted yes
+#  Hostname 192.168.1.113
+#  Port 2113
+#
+#Host imacxz ip113z
+#  ForwardX11Trusted yes
+#  Hostname 23.119.164.150
+#  Port 2113
 
-Host rpi48 ip112
-  Hostname 192.168.1.112
-  Port 2112
-
-Host rpi48z ip112z
-  Hostname 23.119.164.150
-  Port 2112
-
-Host imacx ip113
-  ForwardX11Trusted yes
-  Hostname 192.168.1.113
-  Port 2113
-
-Host imacxz ip113z
-  ForwardX11Trusted yes
-  Hostname 23.119.164.150
-  Port 2113
-
-Host ubuntu-22-04 ip114
-  Hostname 192.168.1.114
-  Port 2114
-
-Host ip114z
-  Hostname 23.119.164.150
-  Port 2114
+#Host ubuntu-22-04 ip114
+#  Hostname 192.168.1.114
+#  Port 2114
+#
+#Host ip114z
+#  Hostname 23.119.164.150
+#  Port 2114
 
 # Suppress when doing git operations on github:
 #   X11 forwarding request failed on channel 0
