--- a/ssh/config
+++ b/ssh/config
@@ -25,6 +25,24 @@ Host do-sfo3-01
   Hostname 164.92.118.108
   Port 22
 
+Host fred-xfi
+  Hostname      71.198.217.87
+  User          kendall
+  Port          2102
+  IdentityFile  /home/wink/.ssh/id_ed25519
+
+Host 3900x-att
+  Hostname      23.119.164.150
+  User          wink
+  Port          2101
+  IdentityFile  /home/wink/.ssh/id_ed25519
+
+Host rpi23-att
+  Hostname      23.119.164.150
+  User          wink
+  Port          2109
+  IdentityFile  /home/wink/.ssh/id_ed25519
+
 # Suppress when doing git operations on github:
 #   X11 forwarding request failed on channel 0
 Host github.com
